--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "chart.js": "^4.2.1",
+    "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-shift-heading": "^1.0.2",
     "remark-math": "^5.1.1"
