--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "node": ">=16.12.0"
   },
   "dependencies": {
+    "@astropub/codecs": "^0.4.4",
+    "blurhash": "^2.0.5",
     "chart.js": "^4.2.1",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
