--- a/package.json
+++ b/package.json
@@ -16,28 +16,25 @@
     "@astrojs/image": "^0.17.0",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/partytown": "^1.0.3",
-    "@astrojs/rss": "^2.1.0",
-    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/sitemap": "^2.0.2",
     "@astrojs/tailwind": "^4.0.0",
-    "@astrolib/analytics": "^0.3.0",
-    "@astrolib/seo": "^0.4.0",
+    "@astrolib/analytics": "^0.4.2",
+    "@astrolib/seo": "^0.6.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "astro": "^2.0.10",
-    "astro-compress": "^1.1.32",
+    "astro-compress": "2.0.14",
     "astro-icon": "^0.8.0",
     "eslint": "^8.33.0",
-    "eslint-plugin-astro": "^0.27.1",
+    "eslint-plugin-astro": "^0.29.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "limax": "2.1.0",
-    "mdast-util-to-string": "^3.1.1",
-    "prettier": "^2.8.4",
-    "prettier-plugin-astro": "^0.10.0",
+    "mdast-util-to-string": "^4.0.0",
+    "prettier": "^3.0.2",
+    "prettier-plugin-astro": "^0.12.0",
     "reading-time": "^1.5.0",
     "sharp": "^0.32.1",
-    "svgo": "2.8.0",
     "tailwindcss": "^3.2.6",
     "typescript": "^5.1.3"
   },
@@ -47,10 +44,11 @@
   "dependencies": {
     "@astropub/codecs": "^0.4.4",
     "blurhash": "^2.0.5",
-    "chart.js": "^4.2.1",
+    "limax": "^4.1.0",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
-    "rehype-shift-heading": "^1.0.2",
-    "remark-math": "^5.1.1"
+    "rehype-shift-heading": "^2.0.0",
+    "remark-math": "^5.1.1",
+    "svgo": "^3.0.2"
   }
 }
